--- a/ApiProjeKampi.WebUI/Views/AdminLayout/Index.cshtml
+++ b/ApiProjeKampi.WebUI/Views/AdminLayout/Index.cshtml
@@ -22,7 +22,7 @@
       </div>
       <footer class="main-footer">
         <div class="footer-left">
-          <a href="templateshub.net">Templateshub</a>
+          <a href="furkanturker.com">Furkan Türker</a>
         </div>
         <div class="footer-right">
         </div>
