--- a/ApiProjeKampi.WebUI/Views/Product/CreateProduct.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Product/CreateProduct.cshtml
@@ -18,7 +18,7 @@
                             <input type="text" asp-for="Name" class="form-control"/>
                             <br/>
                             <label>Ürün Fiyatı</label>
-                            <input type="text" asp-for="Price" class="form-control"/>
+                            <input type="number" asp-for="Price" class="form-control"/>
                             <br/>
                             <label>Ürün Kategorisi</label>
                             <select class="form-control" asp-for="CategoryId" asp-items="@ViewBag.Categories">
