--- a/ApiProjeKampi.WebUI/Views/Shared/Components/_DefaultMenuProductComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Shared/Components/_DefaultMenuProductComponentPartial/Default.cshtml
@@ -1,31 +1,45 @@
 @model List<ApiProjeKampi.WebUI.Dtos.ProductDtos.ResultProductDto>
 
-<div class="tab-content" data-aos="fade-up" data-aos-delay="200">
+@if (Model != null)
+{
+    <div class="tab-content mt-5" data-aos="fade-up" data-aos-delay="200">
 
-  
-   <div class="tab-pane fade active show" id="menu-starters">
-
-    <div class="tab-header text-center">
-      <p>Menü</p>
-      <h3>Tüm Lezzetler</h3>
-    </div>
-
-    <div class="row gy-5">
-      
-      @foreach (var item in Model)
-      {
-        <div class="col-lg-4 menu-item">
-          <a href="@item.ImageUrl" class="glightbox"><img src="@item.ImageUrl" class="menu-img img-fluid" alt=""></a>
-          <h4>@item.Name</h4>
-          <p class="ingredients">
-            @item.Description
-          </p>
-          <p class="price">
-            @item.Price
-          </p>
+        <!-- TÜMÜ -->
+        <div class="tab-pane fade active show" id="menu-all">
+            <div class="row gy-5">
+                @foreach (var item in Model)
+                {
+                    <div class="col-lg-4 menu-item">
+                        <img src="@item.ImageUrl" class="menu-img img-fluid" style="width: 500px; height: 200px;" />
+                        <h4>@item.Name</h4>
+                        <p>@item.Description</p>
+                        <p>@item.Price ₺</p>
+                    </div>
+                }
+            </div>
         </div>
-      }
-    </div>
-  </div>
 
-</div>
+        <!-- CATEGORY FILTER -->
+        @foreach (var categoryId in Model.Where(x => x.CategoryId != 0)
+                      .Select(x => x.CategoryId)
+                      .Distinct())
+        {
+            <div class="tab-pane fade" id="menu-@categoryId">
+                <div class="row gy-5">
+
+                    @foreach (var item in Model.Where(x => x.CategoryId == categoryId))
+                    {
+                        <div class="col-lg-4 menu-item">
+                            <img src="@item.ImageUrl" class="menu-img img-fluid" />
+                            <h4>@item.Name</h4>
+                            <p>@item.Description</p>
+                            <p>@item.Price ₺</p>
+                        </div>
+                    }
+
+                </div>
+            </div>
+        }
+
+    </div>
+}
