--- a/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -1,28 +1,110 @@
-
-
 <div class="main-sidebar sidebar-style-2">
   <aside id="sidebar-wrapper">
     <div class="sidebar-brand">
-      <a href="index.html"> <img alt="image" src="~/otika-bootstrap-admin-template/assets/img/logo.png" class="header-logo"/>
-        <span
-          class="logo-name">Yummy</span>
+      <a href="index.html">
+        <img alt="image" src="~/otika-bootstrap-admin-template/assets/img/logo.png" class="header-logo"/>
+        <span class="logo-name">Yummy</span>
       </a>
     </div>
+
     <ul class="sidebar-menu">
-      <li class="dropdown"><a href="~/Default/Index" target="_blank" class="nav-link"><i data-feather="home"></i><span>Siteye Git</span></a> </li>
-      <li class="dropdown"><a href="index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a> </li>
-      <li class="dropdown"><a href="~/Category/CategoryList" class="nav-link"><i data-feather="briefcase"></i><span>Kategoriler</span></a></li>
-      <li class="dropdown"><a href="~/Product/ProductList" class="nav-link"><i data-feather="package"></i><span>Ürünler</span></a></li>
-      <li class="dropdown"><a href="~/Feature/FeatureList" class="nav-link"><i data-feather="cast"></i><span>Öne Çıkan Alan</span></a></li>
-      <li class="dropdown"><a href="~/About/AboutList" class="nav-link"><i data-feather="feather"></i><span>Hakkımızda Alan</span></a></li>
-      <li class="dropdown"><a href="~/WhyYummy/WhyYummyList" class="nav-link"><i data-feather="github"></i><span>Neden Yummy</span></a></li>
-      <li class="dropdown"><a href="~/Testimonial/TestimonialList" class="nav-link"><i data-feather="aperture"></i><span>Müşteri Yorumları</span></a></li>
-      <li class="dropdown"><a href="~/YummyEvent/YummyEventList" class="nav-link"><i data-feather="activity"></i><span>Etkinlikler</span></a></li>
-      <li class="dropdown"><a href="~/Chef/ChefList" class="nav-link"><i data-feather="users"></i><span>Şefler</span></a></li>
-      <li class="dropdown"><a href="~/Rezervation/RezervationList" class="nav-link"><i data-feather="phone-call"></i><span>Rezervasyonlar</span></a></li>
-      <li class="dropdown"><a href="~/Gallery/ImageList" class="nav-link"><i data-feather="image"></i><span>Galeri</span></a></li>
-      <li class="dropdown"><a href="~/Contact/ContactList" class="nav-link"><i data-feather="phone"></i><span>İletişim Bilgileri</span></a></li>
-      <li class="dropdown"><a href="~/Message/MessageList" class="nav-link"><i data-feather="phone"></i><span>Gelen Mesajlar</span></a></li>
+
+      <!-- Genel -->
+      <li class="menu-header">Genel</li>
+      <li class="dropdown">
+        <a href="~/Default/Index" target="_blank" class="nav-link">
+          <i data-feather="globe"></i><span>Siteye Git</span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a href="~/Dashboard/Index" class="nav-link">
+          <i data-feather="monitor"></i><span>Dashboard</span>
+        </a>
+      </li>
+      <li class="menu-header">Yapay Zeka</li>
+      <li class="dropdown">
+        <a href="~/AI/CreateRecipeWithOpenAI" class="nav-link">
+          <i data-feather="cpu"></i><span>Tarif Önerisi</span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a href="~/Chat/SendChatWithAI" class="nav-link">
+          <i data-feather="message-circle"></i><span>AI Sohbet</span>
+        </a>
+      </li>
+
+      <!-- Menü Yönetimi -->
+      <li class="menu-header">Menü Yönetimi</li>
+      <li class="dropdown">
+        <a href="~/Category/CategoryList" class="nav-link">
+          <i data-feather="tag"></i><span>Kategoriler</span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a href="~/Product/ProductList" class="nav-link">
+          <i data-feather="package"></i><span>Ürünler</span>
+        </a>
+      </li>
+
+      <!-- İçerik Yönetimi -->
+      <li class="menu-header">İçerik Yönetimi</li>
+      <li class="dropdown">
+        <a href="~/Feature/FeatureList" class="nav-link">
+          <i data-feather="star"></i><span>Öne Çıkan Alan</span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a href="~/About/AboutList" class="nav-link">
+          <i data-feather="info"></i><span>Hakkımızda</span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a href="~/WhyYummy/WhyYummyList" class="nav-link">
+          <i data-feather="help-circle"></i><span>Neden Yummy</span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a href="~/Testimonial/TestimonialList" class="nav-link">
+          <i data-feather="message-circle"></i><span>Müşteri Yorumları</span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a href="~/YummyEvent/YummyEventList" class="nav-link">
+          <i data-feather="calendar"></i><span>Etkinlikler</span>
+        </a>
+      </li>
+
+      <!-- Ekip & Medya -->
+      <li class="menu-header">Ekip & Medya</li>
+      <li class="dropdown">
+        <a href="~/Chef/ChefList" class="nav-link">
+          <i data-feather="users"></i><span>Şefler</span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a href="~/Gallery/ImageList" class="nav-link">
+          <i data-feather="image"></i><span>Galeri</span>
+        </a>
+      </li>
+
+      <!-- Müşteri İşlemleri -->
+      <li class="menu-header">Müşteri İşlemleri</li>
+      <li class="dropdown">
+        <a href="~/Rezervation/RezervationList" class="nav-link">
+          <i data-feather="book"></i><span>Rezervasyonlar</span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a href="~/Contact/ContactList" class="nav-link">
+          <i data-feather="phone"></i><span>İletişim Bilgileri</span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a href="~/Message/MessageList" class="nav-link">
+          <i data-feather="mail"></i><span>Gelen Mesajlar</span>
+        </a>
+      </li>
+
     </ul>
   </aside>
 </div>
